objects/IntegrationSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Integration Parameters and Settings</description>
    <fields>
        <fullName>AgencyID__c</fullName>
        <description>Agency ID</description>
        <label>Agency ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyName__c</fullName>
        <description>Agency Name</description>
        <label>CMS Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMSPassword__c</fullName>
        <description>CMS Password</description>
        <label>CMS Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallMethod__c</fullName>
        <description>Type/Call Method</description>
        <label>Call Method</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndpointURL__c</fullName>
        <description>Endpoint URL</description>
        <label>Endpoint URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <description>Fiscal Year</description>
        <label>Fiscal Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUD_AMI_Data_Token_1__c</fullName>
        <label>HUD AMI Data Token 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HUD_AMI_Data_Token_2__c</fullName>
        <label>HUD AMI Data Token 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HUD_AMI_Data_Token_3__c</fullName>
        <label>HUD AMI Data Token 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HUD_AMI_End_Point_URL__c</fullName>
        <label>HUD AMI End Point URL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <description>Host</description>
        <label>Host</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegrationType__c</fullName>
        <description>Type of Integratiaon like HUDARM, DUSETTING etc</description>
        <label>Integration Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password</description>
        <label>Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Username</description>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorID__c</fullName>
        <description>Vendor ID</description>
        <label>Vendor ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Integration Settings</label>
</CustomObject>